--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="css/favicon (1).ico">
     <title>La cocina de Elena</title>
 </head>
+    <header></header>
 <body>
 <div id="main">
 <div id="banner">
